[jOOQ/jOOQ#7863] Fixed binding of %ROWTYPE IN and OUT parameters
Previous commits fixed TABLE OF X%ROWTYPE bindings, but the X%ROWTYPE emulation was not implemented yet. Those can't be bound using ordinary SQLData API, it seems.